# service-monitor

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml
.github/workflows/: rust.yml
src/: config.rs  lib.rs  main.rs  monitor.rs  telegram.rs  website.rs
src/monitor/: api.rs  telegram.rs  utils.rs  website.rs
src/monitor/telegram/: models.rs
tests/: api.rs  monitor.rs
