[package]
name = "service-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.6"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.28.2", features = ["full"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
checkssl = "0.2.0"

